third_party/move/move-compiler-v2/tests/more-v1/expansion/unbound_module_alias_in_type.exp

Diagnostics:
error: unbound module
  ┌─ tests/more-v1/expansion/unbound_module_alias_in_type.move:2:16
  │
2 │     fun foo(x: X::T) {}
  │                ^ Unbound module or type alias 'X'
